--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=demo
 
 # Configuración de la base de datos MySQL
-spring.datasource.url=jdbc:mysql://10.203.0.8:3306/base_datos?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/base_datos?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
 spring.datasource.username=root
 spring.datasource.password=MySQL
