--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 spring.application.name=demo
 
 # Configuración de la base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/base_datos?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://107.22.167.68:8005/base_datos?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
 spring.datasource.username=root
-spring.datasource.password=MySQL
-server.port=9090
+spring.datasource.password=utec
+server.port=8080
 
 
 # Proveedor de JPA (Hibernate)
